# altis

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  styles.css  styles.scss
src/: app.rs  authorization_untis_client.rs  errors.rs  main.rs  navbar.rs  persistence_manager.rs  request_proxy.rs  teacher_table_generator.rs  untis_client.rs  untis_week.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/book2eat/: client.rs
src/components/: absences.rs  app.rs  auth_wrapper.rs  book2eat.rs  letto.rs  loading.rs  messages.rs  mod.rs  navbar.rs  qr_code.rs  settings.rs  timetable.rs
src/components/settings/: auth_settings_card.rs  clear_settings_button.rs  mod.rs  settings.rs  settings_card.rs  visual_settings.rs
src/components/timetable/: group_modal.rs  lessons_render_helper.rs  mod.rs  timetable.rs  timetable_controls.rs  timetable_render.rs
src/data_models/: cleaning.rs  mod.rs
src/data_models/clean_models/: clean_models.rs  mod.rs  untis.rs
src/data_models/response_models/: book2eat.rs  mod.rs  response_models.rs  timetable_stuff.rs  untis_response_models.rs  untis_timetables.rs
src/untis/: auth.rs  authorization_untis_client.rs  cached_untis_client.rs  mod.rs  teacher_table_generator.rs  untis_client.rs  untis_week.rs
