[package]
name = "altis-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
console_error_panic_hook = "0.1.7"
log = "0.4.29"
web-sys = { version = "0.3.83", features = ["HtmlDocument"] }
serde_json = "1.0.147"
wasm-bindgen-futures = "0.4.56"
totp-rs = "5.7.0"
wasm-logger = "0.2.0"
js-sys = "0.3.83"
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "0.2.106"
serde-wasm-bindgen = "0.6.5"

[workspace]
members = ["src-tauri"]
[build-dependencies]
