[package]
name = "altis-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.22.0", features = ["csr"] }
console_error_panic_hook = "0.1.7"
log = "0.4.29"
web-sys = { version = "0.3.85", features = ["HtmlDocument", "HtmlSelectElement", "HtmlElement", "Event", "TouchList", "Touch"] }
serde_json = "1.0.149"
wasm-bindgen-futures = "0.4.58"
totp-rs = "5.7.0"
chrono = {  version = "0.4.43", features = ["wasmbind", "serde"] }
wasm-logger = "0.2.0"
js-sys = "0.3.85"
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "0.2.108"
serde-wasm-bindgen = "0.6.5"
chrono-tz = "0.10.4"
futures = "0.3.31"
gloo-timers = "0.3.0"
serde_urlencoded = "0.7.1"
qrcode-generator = "5.0.0"

[workspace]
members = ["src-tauri"]
[build-dependencies]
chrono = "0.4.42"
